welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:4: error: not found: value loonkingFor
		if(nums(i)==loonkingFor){
                            ^