welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
	var a=0;
	for(i<-0 to nums.length){
		if(nums(i)==loonkingFor){
			a=a+1;
		}
	}
	return a
}
